spec/error_division_by_zero.expected
before
Parse error: spec/error_division_by_zero.kex:4:20: runtime error: Division by zero
