spec/error_division_by_zero.kex
# Division by zero is a runtime error.
main do
  IO.printLine("before")
  IO.printLine(1 / 0)
end
